--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body style="margin:0;">
 <canvas id="app"></canvas>
+<input id="gpx" type="file" accept=".gpx" style="position:fixed;top:12px;left:12px;z-index:10" />
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
