--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="margin:0;">
 <canvas id="app"></canvas>
-<select id="gpx" style="position:fixed;top:12px;left:12px;z-index:10"></select>
+<div id="route-list" style="position:fixed;top:12px;left:12px;z-index:10;background:rgba(0,0,0,0.4);padding:4px;color:white;font:12px sans-serif;"></div>
 <div id="controls" style="position:fixed;top:50px;left:12px;z-index:10;background:rgba(0,0,0,0.4);padding:4px;color:white;font:12px sans-serif;">
   <label>Route <input id="roadWidth" type="number" value="6" step="0.1" style="width:60px" /></label><br />
   <label>Dash <input id="dashLength" type="number" value="3" step="0.1" style="width:60px" /></label><br />
