--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Roue libre – Three + Rapier</title>
+<style>
+  #loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+  }
+  #loader-bar {
+    width: 80%;
+    max-width: 400px;
+    height: 12px;
+    background: #444;
+  }
+  #loader-progress {
+    height: 100%;
+    width: 0%;
+    background: #3aa6ff;
+  }
+</style>
 </head>
 <body style="margin:0;">
 <canvas id="app"></canvas>
@@ -12,6 +37,11 @@
   <label>Route <input id="roadWidth" type="number" value="6" step="0.1" style="width:60px" /></label><br />
   <label>Dash <input id="dashLength" type="number" value="3" step="0.1" style="width:60px" /></label><br />
   <label>Gap <input id="gapLength" type="number" value="5" step="0.1" style="width:60px" /></label>
+</div>
+<div id="loader">
+  <div id="loader-bar">
+    <div id="loader-progress"></div>
+  </div>
 </div>
 <script type="module" src="/src/main.ts"></script>
 </body>
