--- a/index.html
+++ b/index.html
@@ -4,43 +4,18 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Roue libre – Three + Rapier</title>
-<style>
-  #loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
-  }
-  #loader-bar {
-    width: 80%;
-    max-width: 400px;
-    height: 12px;
-    background: #444;
-  }
-  #loader-progress {
-    height: 100%;
-    width: 0%;
-    background: #3aa6ff;
-  }
-</style>
 </head>
-<body style="margin:0;">
+<body class="m-0">
 <canvas id="app"></canvas>
-<div id="route-list" style="position:fixed;top:12px;left:12px;z-index:10;background:rgba(0,0,0,0.4);padding:4px;color:white;font:12px sans-serif;"></div>
-<div id="controls" style="position:fixed;top:50px;left:12px;z-index:10;background:rgba(0,0,0,0.4);padding:4px;color:white;font:12px sans-serif;">
-  <label>Route <input id="roadWidth" type="number" value="6" step="0.1" style="width:60px" /></label><br />
-  <label>Dash <input id="dashLength" type="number" value="3" step="0.1" style="width:60px" /></label><br />
-  <label>Gap <input id="gapLength" type="number" value="5" step="0.1" style="width:60px" /></label>
+<div id="route-list" class="fixed top-3 left-3 z-10 bg-black/40 p-1 text-white text-xs font-sans"></div>
+<div id="controls" class="fixed top-12 left-3 z-10 bg-black/40 p-1 text-white text-xs font-sans">
+  <label>Route <input id="roadWidth" type="number" value="6" step="0.1" class="w-16" /></label><br />
+  <label>Dash <input id="dashLength" type="number" value="3" step="0.1" class="w-16" /></label><br />
+  <label>Gap <input id="gapLength" type="number" value="5" step="0.1" class="w-16" /></label>
 </div>
-<div id="loader">
-  <div id="loader-bar">
-    <div id="loader-progress"></div>
+<div id="loader" class="hidden fixed inset-0 bg-black/70 items-center justify-center z-[100]">
+  <div id="loader-bar" class="w-4/5 max-w-[400px] h-3 bg-gray-700">
+    <div id="loader-progress" class="h-full w-0 bg-blue-500"></div>
   </div>
 </div>
 <script type="module" src="/src/main.ts"></script>
