fix: hide canvas overflow

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Roue libre – Three + Rapier</title>
 </head>
-<body class="m-0">
-<canvas id="app"></canvas>
+<body class="m-0 overflow-hidden">
+<canvas id="app" class="block"></canvas>
 <div
   id="route-list"
   style="position:fixed;top:0.75rem;left:0.75rem;z-index:10;"
