--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <label>Dash <input id="dashLength" type="number" value="3" step="0.1" class="w-16" /></label><br />
   <label>Gap <input id="gapLength" type="number" value="5" step="0.1" class="w-16" /></label>
 </div>
-<div id="loader" class="hidden fixed inset-0 bg-black/70 items-center justify-center z-[100]">
+<div id="loader" class="hidden flex fixed inset-0 bg-black/70 items-center justify-center z-[100]">
   <div id="loader-bar" class="w-4/5 max-w-[400px] h-3 bg-gray-700">
     <div id="loader-progress" class="h-full w-0 bg-blue-500"></div>
   </div>
