Fix route list visibility and center selector

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <canvas id="app" class="block"></canvas>
 <div
   id="route-list"
-  class="fixed top-3 left-3 z-10 bg-black/40 p-1 text-white text-xs font-sans"
+  class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 z-10 bg-black/40 p-1 text-white text-xs font-sans"
 ></div>
 <div id="loader" class="hidden fixed inset-0 bg-black/70 items-center justify-center z-[100]">
   <div id="loader-bar" class="w-4/5 max-w-[400px] h-3 bg-gray-700">
