feat: unify background color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="/favicon.ico" />
 <title>Roue libre – Three + Rapier</title>
 </head>
-<body class="m-0 overflow-hidden">
+<body class="m-0 overflow-hidden bg-neutral-900">
 <canvas id="app" class="block"></canvas>
 <div
   id="route-list"
