--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div id="loader-progress" class="h-full w-0 bg-blue-500"></div>
   </div>
 </div>
+<div
+  id="version"
+  class="fixed bottom-2 left-1/2 -translate-x-1/2 text-white font-sans text-sm z-50 pointer-events-none"
+></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
