feat: add home button to reset route

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body class="m-0 overflow-hidden bg-neutral-900">
 <canvas id="app" class="block"></canvas>
+<button
+  id="home-btn"
+  class="hidden fixed top-4 left-4 z-20 bg-white text-black text-xs font-sans px-2 py-1 rounded"
+>
+  Accueil
+</button>
 <div
   id="route-list"
   class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 z-10 bg-black/40 p-1 text-white text-xs font-sans"
