--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 >
   Accueil
 </button>
-<div
-  id="route-list"
-  class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 z-10 w-full max-w-md space-y-2 rounded-lg bg-white/90 p-4 text-sm font-sans text-gray-900 shadow dark:bg-gray-800/90 dark:text-gray-200"
-></div>
+  <ul
+    id="route-list"
+    class="list-group fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 z-10 w-full max-w-md divide-y divide-gray-200 rounded-lg bg-white/90 p-4 text-sm font-sans text-gray-900 shadow dark:divide-gray-700 dark:bg-gray-800/90 dark:text-gray-200"
+  ></ul>
 <div id="loader" class="hidden fixed inset-0 z-[100] items-center justify-center bg-black/70">
   <div id="loader-bar" class="w-4/5 max-w-[400px] h-3 rounded-full bg-gray-200 dark:bg-gray-700 overflow-hidden">
     <div id="loader-progress" class="h-full w-0 bg-blue-600"></div>
