--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </button>
   <ul
     id="route-list"
-    class="list-group fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 z-10 w-full max-w-md divide-y divide-gray-200 rounded-lg bg-white/90 p-4 text-sm font-sans text-gray-900 shadow dark:divide-gray-700 dark:bg-gray-800/90 dark:text-gray-200"
+    class="list-group fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 z-10 max-w-md divide-y divide-gray-200 rounded-lg bg-white/90 p-4 text-sm font-sans text-gray-900 shadow dark:divide-gray-700 dark:bg-gray-800/90 dark:text-gray-200"
   ></ul>
 <div id="loader" class="hidden fixed inset-0 z-[100] items-center justify-center bg-black/70">
   <div id="loader-bar" class="w-4/5 max-w-[400px] h-3 rounded-full bg-gray-200 dark:bg-gray-700 overflow-hidden">
