Add simulation controls

--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
   </div>
 </div>
 <div
+  id="controls"
+  class="fixed bottom-4 right-4 z-50 flex gap-2 pointer-events-auto"
+>
+  <button
+    id="start-btn"
+    class="btn btn-primary font-sans"
+    disabled
+  >
+    Start
+  </button>
+  <button
+    id="pause-btn"
+    class="btn btn-primary font-sans"
+    disabled
+  >
+    Pause
+  </button>
+  <button
+    id="reset-btn"
+    class="btn btn-primary font-sans"
+    disabled
+  >
+    Reset
+  </button>
+</div>
+<div
   id="version"
   class="fixed bottom-2 left-1/2 -translate-x-1/2 text-white font-sans text-sm z-50 pointer-events-none opacity-100"
 ></div>
