fix: show loader progress

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   ></ul>
 <div id="loader" class="hidden fixed inset-0 z-[100] flex items-center justify-center bg-black/70">
   <div id="loader-bar" class="w-4/5 max-w-[400px] h-3 rounded-full bg-gray-200 dark:bg-gray-700 overflow-hidden">
-    <div id="loader-progress" class="h-full w-0 bg-blue-600"></div>
+    <div id="loader-progress" class="h-full bg-blue-600"></div>
   </div>
 </div>
 <div
