Ensure dark theme preserved when exiting simulation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr" data-theme="light">
+<html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,8 +11,12 @@
   </style>
   <script>
     (() => {
-      if (localStorage.getItem('theme') === 'dark') {
+      const theme = localStorage.getItem('theme')
+      if (theme === 'dark') {
         document.documentElement.classList.add('dark')
+        document.documentElement.setAttribute('data-theme', 'dark')
+      } else {
+        document.documentElement.setAttribute('data-theme', 'light')
       }
     })()
   </script>
