--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
   >
     Reset
   </button>
+  <button
+    id="camera-lock-btn"
+    class="btn btn-secondary font-sans"
+    disabled
+    title="Lock or unlock the follow camera (L)"
+  >
+    Lock camera (L)
+  </button>
 </div>
 <div
   id="version"
